if/freebasic/hpdf.bi

declare function HPDF_Image_SetColorMask cdecl alias "HPDF_Image_SetColorMask" (byval image as HPDF_Image, byval rmin as HPDF_UINT, byval rmax as HPDF_UINT, byval gmin as HPDF_UINT, byval gmax as HPDF_UINT, byval bmin as HPDF_UINT, byval bmax as HPDF_UINT) as HPDF_STATUS
declare function HPDF_Image_SetMaskImage cdecl alias "HPDF_Image_SetMaskImage" (byval image as HPDF_Image, byval mask_image as HPDF_Image) as HPDF_STATUS
declare function HPDF_SetInfoAttr cdecl alias "HPDF_SetInfoAttr" (byval pdf as HPDF_Doc, byval type as HPDF_InfoType, byval value as zstring ptr) as HPDF_STATUS
declare function HPDF_GetInfoAttr cdecl alias "HPDF_GetInfoAttr" (byval pdf as HPDF_Doc, byval type as HPDF_InfoType) as zstring ptr
declare function HPDF_SetInfoDateAttr cdecl alias "HPDF_SetInfoDateAttr" (byval pdf as HPDF_Doc, byval type as HPDF_InfoType, byval value as HPDF_Date) as HPDF_STATUS
declare function HPDF_SetPassword cdecl alias "HPDF_SetPassword" (byval pdf as HPDF_Doc, byval owner_passwd as zstring ptr, byval user_passwd as zstring ptr) as HPDF_STATUS
declare function HPDF_SetPermission cdecl alias "HPDF_SetPermission" (byval pdf as HPDF_Doc, byval permission as HPDF_UINT) as HPDF_STATUS
declare function HPDF_SetEncryptionMode cdecl alias "HPDF_SetEncryptionMode" (byval pdf as HPDF_Doc, byval mode as HPDF_EncryptMode, byval key_len as HPDF_UINT) as HPDF_STATUS
declare function HPDF_SetCompressionMode cdecl alias "HPDF_SetCompressionMode" (byval pdf as HPDF_Doc, byval mode as HPDF_UINT) as HPDF_STATUS
declare function HPDF_Font_GetFontName cdecl alias "HPDF_Font_GetFontName" (byval font as HPDF_Font) as zstring ptr
declare function HPDF_Font_GetEncodingName cdecl alias "HPDF_Font_GetEncodingName" (byval font as HPDF_Font) as zstring ptr
declare function HPDF_Font_GetUnicodeWidth cdecl alias "HPDF_Font_GetUnicodeWidth" (byval font as HPDF_Font, byval code as HPDF_UNICODE) as HPDF_INT
declare function HPDF_Font_GetBBox cdecl alias "HPDF_Font_GetBBox" (byval font as HPDF_Font) as HPDF_Box
declare function HPDF_Font_GetAscent cdecl alias "HPDF_Font_GetAscent" (byval font as HPDF_Font) as HPDF_INT
declare function HPDF_Font_GetDescent cdecl alias "HPDF_Font_GetDescent" (byval font as HPDF_Font) as HPDF_INT
declare function HPDF_Font_GetXHeight cdecl alias "HPDF_Font_GetXHeight" (byval font as HPDF_Font) as HPDF_UINT
declare function HPDF_Font_GetCapHeight cdecl alias "HPDF_Font_GetCapHeight" (byval font as HPDF_Font) as HPDF_UINT
declare function HPDF_Font_TextWidth cdecl alias "HPDF_Font_TextWidth" (byval font as HPDF_Font, byval text as HPDF_BYTE ptr, byval len as HPDF_UINT) as HPDF_TextWidth
declare function HPDF_Font_MeasureText cdecl alias "HPDF_Font_MeasureText" (byval font as HPDF_Font, byval text as HPDF_BYTE ptr, byval len as HPDF_UINT, byval width as HPDF_REAL, byval font_size as HPDF_REAL, byval char_space as HPDF_REAL, byval word_space as HPDF_REAL, byval wordwrap as HPDF_BOOL, byval real_width as HPDF_REAL ptr) as HPDF_UINT
declare function HPDF_CreateExtGState cdecl alias "HPDF_CreateExtGState" (byval pdf as HPDF_Doc) as HPDF_ExtGState
declare function HPDF_ExtGState_SetAlphaStroke cdecl alias "HPDF_ExtGState_SetAlphaStroke" (byval ext_gstate as HPDF_ExtGState, byval value as HPDF_REAL) as HPDF_STATUS
declare function HPDF_ExtGState_SetAlphaFill cdecl alias "HPDF_ExtGState_SetAlphaFill" (byval ext_gstate as HPDF_ExtGState, byval value as HPDF_REAL) as HPDF_STATUS
declare function HPDF_ExtGState_SetBlendMode cdecl alias "HPDF_ExtGState_SetBlendMode" (byval ext_gstate as HPDF_ExtGState, byval mode as HPDF_BlendMode) as HPDF_STATUS
declare function HPDF_Page_TextWidth cdecl alias "HPDF_Page_TextWidth" (byval page as HPDF_Page, byval text as zstring ptr) as HPDF_REAL
declare function HPDF_Page_MeasureText cdecl alias "HPDF_Page_MeasureText" (byval page as HPDF_Page, byval text as zstring ptr, byval width as HPDF_REAL, byval wordwrap as HPDF_BOOL, byval real_width as HPDF_REAL ptr) as HPDF_UINT
declare function HPDF_Page_GetWidth cdecl alias "HPDF_Page_GetWidth" (byval page as HPDF_Page) as HPDF_REAL
declare function HPDF_Page_GetHeight cdecl alias "HPDF_Page_GetHeight" (byval page as HPDF_Page) as HPDF_REAL
declare function HPDF_Page_GetGMode cdecl alias "HPDF_Page_GetGMode" (byval page as HPDF_Page) as HPDF_UINT16
declare function HPDF_Page_GetCurrentPos cdecl alias "HPDF_Page_GetCurrentPos" (byval page as HPDF_Page) as HPDF_Point
declare function HPDF_Page_GetCurrentPos2 cdecl alias "HPDF_Page_GetCurrentPos2" (byval page as HPDF_Page, byval pos as HPDF_Point ptr) as HPDF_STATUS
declare function HPDF_Page_GetCurrentTextPos cdecl alias "HPDF_Page_GetCurrentTextPos" (byval page as HPDF_Page) as HPDF_Point
declare function HPDF_Page_GetCurrentTextPos2 cdecl alias "HPDF_Page_GetCurrentTextPos2" (byval page as HPDF_Page, byval pos as HPDF_Point ptr) as HPDF_STATUS
declare function HPDF_Page_GetCurrentFont cdecl alias "HPDF_Page_GetCurrentFont" (byval page as HPDF_Page) as HPDF_Font
declare function HPDF_Page_GetCurrentFontSize cdecl alias "HPDF_Page_GetCurrentFontSize" (byval page as HPDF_Page) as HPDF_REAL
declare function HPDF_Page_GetTransMatrix cdecl alias "HPDF_Page_GetTransMatrix" (byval page as HPDF_Page) as HPDF_TransMatrix
declare function HPDF_Page_GetLineWidth cdecl alias "HPDF_Page_GetLineWidth" (byval page as HPDF_Page) as HPDF_REAL
declare function HPDF_Page_GetLineCap cdecl alias "HPDF_Page_GetLineCap" (byval page as HPDF_Page) as HPDF_LineCap
declare function HPDF_Page_GetLineJoin cdecl alias "HPDF_Page_GetLineJoin" (byval page as HPDF_Page) as HPDF_LineJoin
declare function HPDF_Page_GetMiterLimit cdecl alias "HPDF_Page_GetMiterLimit" (byval page as HPDF_Page) as HPDF_REAL
declare function HPDF_Page_GetDash cdecl alias "HPDF_Page_GetDash" (byval page as HPDF_Page) as HPDF_DashMode
declare function HPDF_Page_GetFlat cdecl alias "HPDF_Page_GetFlat" (byval page as HPDF_Page) as HPDF_REAL
declare function HPDF_Page_GetCharSpace cdecl alias "HPDF_Page_GetCharSpace" (byval page as HPDF_Page) as HPDF_REAL
declare function HPDF_Page_GetWordSpace cdecl alias "HPDF_Page_GetWordSpace" (byval page as HPDF_Page) as HPDF_REAL
declare function HPDF_Page_GetHorizontalScalling cdecl alias "HPDF_Page_GetHorizontalScalling" (byval page as HPDF_Page) as HPDF_REAL
declare function HPDF_Page_GetTextLeading cdecl alias "HPDF_Page_GetTextLeading" (byval page as HPDF_Page) as HPDF_REAL
declare function HPDF_Page_GetTextRenderingMode cdecl alias "HPDF_Page_GetTextRenderingMode" (byval page as HPDF_Page) as HPDF_TextRenderingMode
declare function HPDF_Page_GetTextRaise cdecl alias "HPDF_Page_GetTextRaise" (byval page as HPDF_Page) as HPDF_REAL
declare function HPDF_Page_GetTextRise cdecl alias "HPDF_Page_GetTextRise" (byval page as HPDF_Page) as HPDF_REAL
declare function HPDF_Page_GetRGBFill cdecl alias "HPDF_Page_GetRGBFill" (byval page as HPDF_Page) as HPDF_RGBColor
declare function HPDF_Page_GetRGBStroke cdecl alias "HPDF_Page_GetRGBStroke" (byval page as HPDF_Page) as HPDF_RGBColor
declare function HPDF_Page_GetCMYKFill cdecl alias "HPDF_Page_GetCMYKFill" (byval page as HPDF_Page) as HPDF_CMYKColor
declare function HPDF_Page_GetCMYKStroke cdecl alias "HPDF_Page_GetCMYKStroke" (byval page as HPDF_Page) as HPDF_CMYKColor
declare function HPDF_Page_GetGrayFill cdecl alias "HPDF_Page_GetGrayFill" (byval page as HPDF_Page) as HPDF_REAL
declare function HPDF_Page_GetGrayStroke cdecl alias "HPDF_Page_GetGrayStroke" (byval page as HPDF_Page) as HPDF_REAL
declare function HPDF_Page_GetStrokingColorSpace cdecl alias "HPDF_Page_GetStrokingColorSpace" (byval page as HPDF_Page) as HPDF_ColorSpace
declare function HPDF_Page_GetFillingColorSpace cdecl alias "HPDF_Page_GetFillingColorSpace" (byval page as HPDF_Page) as HPDF_ColorSpace
declare function HPDF_Page_GetTextMatrix cdecl alias "HPDF_Page_GetTextMatrix" (byval page as HPDF_Page) as HPDF_TransMatrix
declare function HPDF_Page_GetGStateDepth cdecl alias "HPDF_Page_GetGStateDepth" (byval page as HPDF_Page) as HPDF_UINT
declare function HPDF_Page_SetLineWidth cdecl alias "HPDF_Page_SetLineWidth" (byval page as HPDF_Page, byval line_width as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_SetLineCap cdecl alias "HPDF_Page_SetLineCap" (byval page as HPDF_Page, byval line_cap as HPDF_LineCap) as HPDF_STATUS
declare function HPDF_Page_SetLineJoin cdecl alias "HPDF_Page_SetLineJoin" (byval page as HPDF_Page, byval line_join as HPDF_LineJoin) as HPDF_STATUS
declare function HPDF_Page_SetMiterLimit cdecl alias "HPDF_Page_SetMiterLimit" (byval page as HPDF_Page, byval miter_limit as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_SetDash cdecl alias "HPDF_Page_SetDash" (byval page as HPDF_Page, byval dash_ptn as HPDF_UINT16 ptr, byval num_param as HPDF_UINT, byval phase as HPDF_UINT) as HPDF_STATUS
declare function HPDF_Page_SetFlat cdecl alias "HPDF_Page_SetFlat" (byval page as HPDF_Page, byval flatness as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_SetExtGState cdecl alias "HPDF_Page_SetExtGState" (byval page as HPDF_Page, byval ext_gstate as HPDF_ExtGState) as HPDF_STATUS
declare function HPDF_Page_GSave cdecl alias "HPDF_Page_GSave" (byval page as HPDF_Page) as HPDF_STATUS
declare function HPDF_Page_GRestore cdecl alias "HPDF_Page_GRestore" (byval page as HPDF_Page) as HPDF_STATUS
declare function HPDF_Page_Concat cdecl alias "HPDF_Page_Concat" (byval page as HPDF_Page, byval a as HPDF_REAL, byval b as HPDF_REAL, byval c as HPDF_REAL, byval d as HPDF_REAL, byval x as HPDF_REAL, byval y as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_MoveTo cdecl alias "HPDF_Page_MoveTo" (byval page as HPDF_Page, byval x as HPDF_REAL, byval y as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_LineTo cdecl alias "HPDF_Page_LineTo" (byval page as HPDF_Page, byval x as HPDF_REAL, byval y as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_CurveTo cdecl alias "HPDF_Page_CurveTo" (byval page as HPDF_Page, byval x1 as HPDF_REAL, byval y1 as HPDF_REAL, byval x2 as HPDF_REAL, byval y2 as HPDF_REAL, byval x3 as HPDF_REAL, byval y3 as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_CurveTo2 cdecl alias "HPDF_Page_CurveTo2" (byval page as HPDF_Page, byval x2 as HPDF_REAL, byval y2 as HPDF_REAL, byval x3 as HPDF_REAL, byval y3 as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_CurveTo3 cdecl alias "HPDF_Page_CurveTo3" (byval page as HPDF_Page, byval x1 as HPDF_REAL, byval y1 as HPDF_REAL, byval x3 as HPDF_REAL, byval y3 as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_ClosePath cdecl alias "HPDF_Page_ClosePath" (byval page as HPDF_Page) as HPDF_STATUS
declare function HPDF_Page_Rectangle cdecl alias "HPDF_Page_Rectangle" (byval page as HPDF_Page, byval x as HPDF_REAL, byval y as HPDF_REAL, byval width as HPDF_REAL, byval height as HPDF_REAL) as HPDF_STATUS
declare function HPDF_Page_Stroke cdecl alias "HPDF_Page_Stroke" (byval page as HPDF_Page) as HPDF_STATUS
declare function HPDF_Page_ClosePathStroke cdecl alias "HPDF_Page_ClosePathStroke" (byval page as HPDF_Page) as HPDF_STATUS
declare function HPDF_Page_Fill cdecl alias "HPDF_Page_Fill" (byval page as HPDF_Page) as HPDF_STATUS
declare function HPDF_Page_Eofill cdecl alias "HPDF_Page_Eofill" (byval page as HPDF_Page) as HPDF_STATUS
declare function HPDF_Page_FillStroke cdecl alias "HPDF_Page_FillStroke" (byval page as HPDF_Page) as HPDF_STATUS
declare function HPDF_Page_EofillStroke cdecl alias "HPDF_Page_EofillStroke" (byval page as HPDF_Page) as HPDF_STATUS
declare function HPDF_Page_ClosePathFillStroke cdecl alias "HPDF_Page_ClosePathFillStroke" (byval page as HPDF_Page) as HPDF_STATUS
declare function HPDF_Page_ClosePathEofillStroke cdecl alias "HPDF_Page_ClosePathEofillStroke" (byval page as HPDF_Page) as HPDF_STATUS
declare function HPDF_Page_EndPath cdecl alias "HPDF_Page_EndPath" (byval page as HPDF_Page) as HPDF_STATUS
